--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "aws/aws-sdk-php": "^3.15",
-        "parse/php-sdk": "^1.2"
+        "parse/php-sdk": "^1.2",
+        "miinto/laravel-mssql": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
